# pie-crust

./: .gitignore  README.md  pie-crust.code-workspace
firmware/: C800.cfg  Cn00_RelocDriver.cfg  Makefile  crust.inc  drv0boot.s  drv1drive.s
gal/: build.bat  gal.doc  gal.jed  gal.pla  gal.pld  gal.si
hardware/: .gitignore  PieCrust.kicad_pcb  PieCrust.kicad_pro  PieCrust.kicad_sch
hardware/Library.pretty/: C_Disc_D4.3mm_W1.9mm_P5.00mm.kicad_mod
pico/: CMakeLists.txt  Makefile  binary.s  bus.pio  flash.bat  flash_firmware.h  genlst.bat  main.cxx
